DBC22-1966: Changing input font sizes to avoid automatic zoom on mobile devices

--- a/src/frontend/src/App.scss
+++ b/src/frontend/src/App.scss
@@ -151,7 +151,7 @@ body {
 
 // Forms
 .form-control {
-  font-size: 0.875rem;
+  font-size: 1rem;
   padding: 0.385rem 0.75rem;
   line-height: 1;
 
